Fixed  spacing on SpaceFresh index.html

--- a/root/SpaceFresh/css/main.css
+++ b/root/SpaceFresh/css/main.css
@@ -19,17 +19,7 @@ html {
 responsive_nav {
 	z-index: 5;
 }
-/*
-.bgcW90pct {
-	background:rgba(255,255,255,.9)
-}
-.bgcW70pct {
-	background:rgba(255,255,255,.7)
-}
-.bgcW40pct {
-	background:rgba(255,255,255,.4)
-}
-*/
+
 .container, .w1024 {
 	max-width:1024px;
 
@@ -41,7 +31,6 @@ responsive_nav {
 
 article, #calendar {
 	padding:0 1em;
-	height: 100vh;
 	background:rgba(255,255,255,.7)
 
 }
@@ -94,6 +83,10 @@ form textarea {
 blockquote {
 	margin: 1rem;
 }
+footer:before {
+	content:'';
+	clear:both;
+}
 footer {
 	padding: .5rem 2rem;
 	color: #333;
@@ -116,16 +109,27 @@ footer {
 	height:50px;
 	margin: 1rem;
 }
+#indexPg {
+	display:block;
+	height:auto;
+
+}
 @media screen and (min-width:600px) {
 
 }
 @media screen and (min-width:768px) {
+	article, #calendar {
+	height: 80rem;
+	overflow: hidden;
+
+}
 	.stayOpen {
 		height: auto;
 	}
 	.spacer {
 		display:block;
 		height: 100vh;
+		background:transparent;
 	}
 aside.notMobile {
 	display: block;
